# GPU-TASKS

./: .gitignore  CMakeLists.txt  README.md
bench/: CMakeLists.txt  main.cu
bench_plots/: bench_result.json  main.py
core/: CMakeLists.txt
core/includes/: gpu_addVect.cuh
core/src/: src1.cu
cuda_project/: .gitignore
cuda_project/core/: 123test.cu
cuda_project/core/includes/: matrixOperations.cuh  matrixOperationsKernel.cuh
lab1/: CMakeLists.txt
lab1/bench/: CMakeLists.txt  main.cu
lab1/bench_plots/: bench_result.json  main.py
lab1/core/: CMakeLists.txt
lab1/report/: lab1_ki22-07b_Glushkov_Korobkov_Berdin.docx
lab1/utils/src/: cuda_timer.cpp
lab2/: .gitignore  CMakeLists.txt
lab2/bench/: CMakeLists.txt
lab2/bench/src/: main.cu
lab2/bench_plots/: bench_result.json  main.py
lab2/core/: CMakeLists.txt
lab2/core/includes/: matrix.cuh  matrixOperations.cuh  matrixOperationsKernel.cuh
lab2/report/: LAB2_Korobkov_Glushkov_Berdin.docx
lab2/tests/: CMakeLists.txt
lab2/tests/src/: main.cu
lab2/utils/includes/: cuda_timer.hpp
lab3/: .gitignore  CMakeLists.txt
lab3/bench/src/: main.cu
lab3/core/: CMakeLists.txt
lab3/core/includes/: data.cuh  matrix.cuh  matrixOperations.cuh  matrixOperationsKernel.cuh
lab3/plots/: main.py  plots  real_complexity_plot.html  speedup_plot.html
lab3/report/: LAB3_Korobkov_Glushkov_Berdin.docx
lab3/tests/: CMakeLists.txt
lab3/tests/src/: main.cu
lab3/utils/: CMakeLists.txt
lab4/: CMakeLists.txt
lab4/bench/: CMakeLists.txt
lab4/bench/src/: main.cu
lab4/core/: CMakeLists.txt
lab4/core/includes/: data.cuh  matrix.cuh  matrixOperations.cuh  matrixOperationsKernel.cuh  matrixView.cuh
lab4/plots/: main.py  plots.json
lab4/report/: LAB4_Korobkov_Glushkov_Berdin.docx
lab4/tests/: CMakeLists.txt
lab4/tests/src/: main.cu
lab4/utils/src/: cuda_timer.cpp
lab5/: CMakeLists.txt
lab5/bench/: CMakeLists.txt
lab5/bench/src/: main.cu
lab5/core/: CMakeLists.txt
lab5/core/includes/: data.cuh  vector.cuh  vectorOperations.cuh  vectorOperationsKernel.cuh  vectorView.cuh
lab5/plots/: main.py  plots.json
lab5/report/: LAB5_Korobkov_Glushkov_Berdin.docx
lab5/tests/: CMakeLists.txt
lab5/tests/src/: main.cu
tests/: CMakeLists.txt  main.cpp  main.cu
utils/: CMakeLists.txt
utils/includes/: cuda_timer.hpp
